<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/terminal_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/statusBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/statusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_disconnected"
            android:textColor="@color/status_disconnected"
            android:textSize="14sp" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/connectButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/terminalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/terminalKeyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusBar">

        <TextView
            android:id="@+id/terminalOutput"
            style="@style/TerminalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/terminal_bg"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:text=""
            tools:text="$ claude --help\nClaude Code CLI..." />

    </ScrollView>

    <include
        android:id="@+id/terminalKeyboard"
        layout="@layout/terminal_keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inputField"
            style="@style/TerminalTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/terminal_bg"
            android:hint="@string/command_hint"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:padding="8dp"
            android:textColorHint="#888888" />

        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/send" />

        <Button
            android:id="@+id/clearButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
